force-app/main/default/objects/Subscription__c/Subscription__c.object-meta.xml
<CustomObject>
    <description>A Subscription in the context of shared solar tracks which customers are subscribed to a specific solar system, detailing their share of the energy produced and any associated costs or benefits.</description>
    <label>Subscription</label>
    <nameField>
        <displayFormat>S - {00000}</displayFormat>
        <label>Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>