force-app/main/default/objects/Subscription__c/fields/Commencement_date__c.field-meta.xml
<CustomField>
    <fullName>Commencement_date__c</fullName>
    <label>Commencement date</label>
    <type>Date</type>
</CustomField>